testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment37.errors.txt
use.js(1,22): error TS2307: Cannot find module './mod' or its corresponding type declarations.


==== use.js (1 errors) ====
    const util = require('./mod')
                         ~~~~~~~
!!! error TS2307: Cannot find module './mod' or its corresponding type declarations.
    function n() {
        util.existy // no error
    }
    util.existy // no error
    
==== mod.js (0 errors) ====
    const util = exports = module.exports = {}
    if (!!false) {
        util.existy = function () { }
    }
    